--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,26 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Snap Deal ECommerce Project",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "npm i express nodemon mongoose cors dotenv helmet jsonwebtoken bcryptjs morgan",
+    "dev": "nodemon server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongodb": "^7.0.0"
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.3",
+    "morgan": "^1.10.1",
+    "nodemon": "^3.1.11"
   }
 }
