--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,20 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "install": "npm i react react-dom react-router-dom axios jwt-decode"
+    "install": "npm i react react-dom react-router-dom axios jwt-decode bootstrap styled-components"
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "styled-components": "^6.3.5"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.28.6",
+    "@babel/preset-react": "^7.28.5",
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
