--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "npm i express nodemon mongoose cors dotenv helmet jsonwebtoken bcryptjs morgan",
+    "install": "npm i express nodemon mongoose cors dotenv helmet jsonwebtoken bcryptjs morgan otp-generator twilio",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.3",
     "morgan": "^1.10.1",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "otp-generator": "^4.0.1",
+    "twilio": "^5.11.2"
   }
 }
