--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
-    "firebase": "^12.7.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.3",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
     "styled-components": "^6.3.5"
