--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.0",
@@ -23,6 +24,7 @@
     "mongoose": "^9.1.3",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.6"
   }
 }
